feat:修改allowOrigins 與新增sing-up swagger資料
